--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-
+    - uses: pnpm/action-setup@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
@@ -24,6 +24,5 @@ jobs:
 
     - name: Build
       run: |
-        npm install -g pnpm
-        pnpm i
+        pnpm install
         pnpm build
